--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="../assets/styles/header.css" />
+    <link rel="stylesheet" href="../assets/styles/style.css" />
+    <link rel="stylesheet" href="../assets/styles/fonts.css" />
+    <script src="../assets/scripts/script.js"></script>
     <title>example1</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="menu">
+        <div class="menu__logo">
+          <a href="#">
+            <img src="../assets/images/header/menu__logo.jpg" alt="" />
+          </a>
+        </div>
+        <div class="menu__nav">
+          <nav class="nav__item"><a href="#">Home</a></nav>
+          <nav class="nav__item"><a href="#">About us</a></nav>
+          <nav class="nav__item"><a href="#">Services</a></nav>
+          <nav class="nav__item"><a href="#">Team</a></nav>
+          <nav class="nav__item"><a href="#">Contact us</a></nav>
+        </div>
+      </div>
+
+      <div class="home">
+        <div class="home__background">
+          <div class="home__text">Photography Web templates</div>
+          <div class="home__button">
+            <div class="button__main">
+              <a href="#">Read more</a>
+            </div>
+            <div class="button__border"></div>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
