--- a/views/index.html
+++ b/views/index.html
@@ -11,33 +11,131 @@
     <title>example1</title>
   </head>
   <body>
+    <!-- header -->
     <header class="header">
-      <div class="menu">
-        <div class="menu__logo">
+      <!-- menu -->
+      <section class="header__menu">
+        <div class="header__logo">
           <a href="#">
-            <img src="../assets/images/header/menu__logo.jpg" alt="" />
+            <img src="../assets/images/header/1.jpg" alt="" />
           </a>
         </div>
-        <div class="menu__nav">
-          <nav class="nav__item"><a href="#">Home</a></nav>
-          <nav class="nav__item"><a href="#">About us</a></nav>
-          <nav class="nav__item"><a href="#">Services</a></nav>
-          <nav class="nav__item"><a href="#">Team</a></nav>
-          <nav class="nav__item"><a href="#">Contact us</a></nav>
+        <div class="header__nav">
+          <nav class="header__item"><a href="#">Home</a></nav>
+          <nav class="header__item"><a href="#">About us</a></nav>
+          <nav class="header__item"><a href="#">Services</a></nav>
+          <nav class="header__item"><a href="#">Team</a></nav>
+          <nav class="header__item"><a href="#">Contact us</a></nav>
         </div>
-      </div>
-
-      <div class="home">
-        <div class="home__background">
-          <div class="home__text">Photography Web templates</div>
-          <div class="home__button">
-            <div class="button__main">
+      </section>
+      <!-- home -->
+      <section class="header__home">
+        <div class="header__background">
+          <img
+            class="header__background"
+            src="../assets/images/header/2.jpg"
+            alt=""
+          />
+        </div>
+        <div class="header__text">Photography Web templates</div>
+        <div class="header__button-block">
+          <div class="header__button">
+            <a href="#">Read more</a>
+          </div>
+          <div class="header__button-border"></div>
+        </div>
+      </section>
+    </header>
+    <main>
+      <!-- about -->
+      <section class="about">
+        <div class="about__image">
+          <div class="about__sheet">
+            <img src="../assets/images/about/1.jpg" alt="" />
+          </div>
+          <div class="about__border"></div>
+        </div>
+        <div class="about__information">
+          <div class="about__title">About Us</div>
+          <div class="about__text">
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit <br />
+            auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
+            nisi elit<br />
+            <br />
+            consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit
+            amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
+            velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
+          </div>
+          <div class="about__button-block">
+            <div class="about__button">
               <a href="#">Read more</a>
             </div>
-            <div class="button__border"></div>
+            <div class="about__button-border"></div>
           </div>
         </div>
+      </section>
+      <!-- portfolio -->
+      <section class="portfolio">
+        <div class="portfolio__main">
+          <div class="portfolio__title">Portfolio</div>
+          <div class="portfolio__text">
+            , nec sagittis sem nibh id elit. Duis sed odio sit amet nibh
+            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
+            nec tellus a odio tincidunt auctor a ornare odio.
+          </div>
+        </div>
+        <div class="portfolio__images">
+          <div class="portfolio__item_one">
+            <img src="/assets/images/portfolio/sheet1.jpg" alt="" />
+          </div>
+          <div class="portfolio__item_two">
+            <img src="/assets/images/portfolio/sheet2.jpg" alt="" />
+          </div>
+          <div class="portfolio__item_three">
+            <img src="/assets/images/portfolio/sheet3.jpg" alt="" />
+          </div>
+          <div class="portfolio__item_four">
+            <img src="/assets/images/portfolio/sheet4.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- footer -->
+    <footer class="footer">
+      <!-- footer -->
+      <div class="footer__block">
+        <div class="footer__logo">
+          <img src="../assets/images/footer/1.jpg" alt="" />
+        </div>
+        <div class="footer__subtitle">
+          ONE PAGE PSD TEMPLATE
+        </div>
+        <div class="footer__line"></div>
+        <address class="footer__address">
+          <div class="footer__street address">
+            13/2 Elizabeth Street Melbourne<br />VIC 3000, Australia
+          </div>
+          <img
+            class="footer__home"
+            src="../assets/images/footer/2.png"
+            alt=""
+          />
+        </address>
+        <div class="footer__contact">
+          <div class="footer__number address">
+            +(00)1247 457893<br />mail.example@legngth.com
+          </div>
+          <img
+            class="footer__phone"
+            src="../assets/images/footer/3.png"
+            alt=""
+          />
+        </div>
+        <div class="footer__copyright">
+          Copyright © 2019 All Rights Reserved. Designed By Sabbir
+        </div>
       </div>
-    </header>
+    </footer>
   </body>
 </html>
